--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz@16..144&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 	<link rel="stylesheet" href="style.css">
@@ -15,8 +17,10 @@
 <body>
 
 	<header>
-			<i class="material-icons">calender</i>
-		<h1>2022 Calender</h1>
+		<div class="title">
+			<i class="material-icons calender-icon">calendar_month</i>
+			<h1>2022 Calender</h1>
+		</div>
 		<hr class="underline"/>
 	</header>
 
@@ -33,10 +37,10 @@
 					<span class="weeks">Sat</span>
 					<div class="day">30</div>
 					<div class="day">31</div>
-					<div class="day disabled"></div>
-					<div class="day disabled"></div>
-					<div class="day disabled"></div>
-					<div class="day disabled"></div>
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
 					<div class="day">1</div>
 					<div class="day">2</div>
 					<div class="day">3</div>
@@ -376,7 +380,7 @@
 					<div class="day">5</div>
 					<div class="day">6</div>
 					<div class="day">7</div>
-					<div class="day">8</div>
+					<div class="day active">8</div>
 					<div class="day">9</div>
 					<div class="day">10</div>
 					<div class="day">11</div>
@@ -466,6 +470,10 @@
 					<span class="weeks">Sat</span>
 					<div class="day">30</div>
 					<div class="day">31</div>
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
 					<div class="day">1</div>
 					<div class="day">2</div>
 					<div class="day">3</div>
@@ -596,7 +604,7 @@
 	
 
 	<div class="designby">
-		<h2>Design by <code>Ackerdev</code><i class="material-icons">love</i></h2>
+		<h2>Design by <code>Ackerdev</code><i class="material-icons">favorite</i></h2>
 	</div>
 </body>
 </html>
