--- a/index.html
+++ b/index.html
@@ -9,18 +9,25 @@
 	<link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz@16..144&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
 	<link rel="stylesheet" href="style.css">
 	<title>2022 Calender</title>
 </head>
 
 <body>
-
 	<header>
 		<div class="title">
-			<i class="material-icons calender-icon">calendar_month</i>
-			<h1>2022 Calender</h1>
+			<h1 class="header-title">
+				<i class="material-icons calender-icon">calendar_month</i>
+				2022 Calender
+			</h1>
+
+			<div>
+				<i class="bi bi-brightness-high-fill" id="toggleDark"></i>
+			</div>
 		</div>
+
 		<hr class="underline"/>
 	</header>
 
@@ -606,5 +613,7 @@
 	<div class="designby">
 		<h2>Design by <code>Ackerdev</code><i class="material-icons">favorite</i></h2>
 	</div>
+
+	<script src="./script.js"></script>
 </body>
 </html>
